log/build_2026-05-16_21-33-04/dxl_wt_openarm_leader/stdout_stderr.log
Consolidate compiler generated dependencies of target read_write_wt_position_node
[ 50%] Built target pub_current_node
[ 75%] Building CXX object CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o
In file included from /opt/ros/humble/include/rclcpp/rclcpp/logging.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:40,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:45:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp: In member function ‘void ReadWriteWTNode::read_present_position()’:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:251:5: error: cannot convert ‘std::__shared_ptr_access<rclcpp::Clock, __gnu_cxx::_S_atomic, false, false>::element_type’ {aka ‘rclcpp::Clock’} to ‘const char*’
  251 |     *this->get_clock(),
      |     ^~~~~~~~~~~~~~~~~~
      |     |
      |     std::__shared_ptr_access<rclcpp::Clock, __gnu_cxx::_S_atomic, false, false>::element_type {aka rclcpp::Clock}
In file included from /opt/ros/humble/include/rmw/rmw/types.h:28,
                 from /opt/ros/humble/include/rcl/rcl/types.h:20,
                 from /opt/ros/humble/include/rcl/rcl/log_level.h:22,
                 from /opt/ros/humble/include/rcl/rcl/arguments.h:21,
                 from /opt/ros/humble/include/rcl/rcl/context.h:28,
                 from /opt/ros/humble/include/rcl/rcl/guard_condition.h:26,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:30,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:45:
/opt/ros/humble/include/rcutils/rcutils/logging.h:479:16: note:   initializing argument 4 of ‘void rcutils_log(const rcutils_log_location_t*, int, const char*, const char*, ...)’
  479 |   const char * format,
      |   ~~~~~~~~~~~~~^~~~~~
gmake[2]: *** [CMakeFiles/read_write_wt_position_node.dir/build.make:76: CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:139: CMakeFiles/read_write_wt_position_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
